# obsidian-mcp-server

./: CLAUDE.md  README.md  pyproject.toml
app/: main.py  obsidian.py  server.py
app/tools/: create_daily_note_tool.py  create_inbox_note_tool.py
app/utils/: utils.py
app/utils/templates/: daily-note.md  inbox-note.md
